# hometask1

./: .gitignore
cpp/crypto/: CMakeLists.txt
cpp/crypto/include/: benchmark_utils.h  seed.h  seed_utils.h
cpp/crypto/src/: benchmark_utils.cpp  seed.cpp  seed_utils.cpp  test_paysim.cpp
cpp/ml/: CMakeLists.txt
cpp/ml/include/: holt_winters.h  metrics.h  time_series.h
cpp/ml/src/: first_tuning.cpp  forth_tuning.cpp  holt_winters.cpp  main_ml.cpp  metrics.cpp  performance_benchmark.cpp  second_tuning.cpp  third_tuning.cpp  time_series.cpp
data/processed/: bitcoin_50000.csv  bitcoin_test_1000.csv  crypto_close_prices.txt  crypto_info.json  crypto_volumes.txt  paysim_8bit_step.csv  paysim_8bit_type.csv  paysim_test_info.json  selected_page.csv  time_series.csv
docs/: data_scripts.md  dataset_description.md  holt_winters_theory.md  our_implementation.md
docs/crypto/: dataset_secription.md  seed_theoty.md
docs/ml/: data_scripts.md  dataset_description.md  our_implementation.md
python/crypto/data_processing/: bitcoin_data_prep.py  process_paysim.py
python/crypto/scripts/: compare.py  generate_numbers.py  graphics.py
python/data_processing/: analyze_dataset.py  check_seasonality.py  find_best_page.py
python/ml/data_processing/: analyze_dataset.py  check_seasonality.py
python/ml/scripts/: plot_performance.py  save_ml_results.py
results/: complexity_summary.json  ml_results.json
results/crypto/: seed_benchmark_results.csv  seed_multi_benchmark.json
results/ml/: memory_complexity.json  time_complexity.json
